Fixed User REST and route
